--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -28,20 +28,22 @@ The second quantum revolution is upon us and quantum technology has advanced to 
 \end{enumerate}
 While quantum key distribution (QKD) is the most well-known application of quantum cryptography, other cryptographic tasks such as bit commitment \cite{CK11}, coin flipping \cite{CK09}, delegated quantum computation \cite{BFK09}, position verification \cite{Unr14}, and password-based identification \cite{DFSS14, DFLSS09} also play important roles in this field.
 
-Also, the intrinsic randomness provided by quantum phenomena is an ideal resource to develop quantum communication protocols for oblivious transfer (OT) \cite{BBCS92}. Remarkably, there is a distinctive difference between classical and quantum OT from a security standpoint, as the latter is proved to be possible assuming only the existence of quantum-hard one-way functions \cite{GLSV21, BCKM21}. This means quantum OT can be based only on symmetric cryptography, requiring weaker security assumptions than classical OT. Moreover, these quantum protocols frequently have a desirable property that guarantees information-theoretic security after the execution of the protocol. This property is commonly called everlasting security. This greatly improves the security of SMC protocols, allowing them to have their security based on symmetric cryptography alone and with this important feature of everlasting security. Regarding oblivious linear evaluation (OLE) primitive, it is known that it can be reduced to OT \cite{KOS16} through classical methods that do not require further assumptions. Therefore, it seems natural to use quantum OT to generate quantum-secure OLE instances.
+Also, the intrinsic randomness provided by quantum phenomena can be leveraged to develop quantum communication protocols for oblivious transfer (OT) \cite{BBCS92}. Importantly, there is a significant difference between classical and quantum OT from a security standpoint, as the latter can be achieved with only the assumption of the existence of quantum-hard one-way functions \cite{GLSV21, BCKM21}. This means quantum OT can be based solely on symmetric cryptography, requiring weaker security assumptions than classical OT. Furthermore, these quantum protocols often possess the desirable property of everlasting security, which guarantees information-theoretic security after the execution of the protocol. This greatly improves the security of SMC protocols, allowing them to rely solely on symmetric cryptography and possess the important feature of everlasting security. With regards to the oblivious linear evaluation (OLE) primitive, it is known that it can be reduced to OT \cite{KOS16} through classical methods that do not require additional assumptions. Therefore, it seems natural to use quantum OT to generate quantum-secure OLE instances.
 
 
-\section*{Contributions and outline} %Section - 1.2
+\section*{Contributions} %Section - 1.2
 
-Despite the many advances, the adoption of quantum cryptography by secure multiparty computation (SMC) systems is still reduced. This is due to the efficiency challenges imposed by quantum technology and the need of high throughput of both OT and OLE primitives in boolean- and arithmetic-based SMC, respectively.
+Despite the many advances, the adoption of quantum cryptography in secure multiparty computation (SMC) systems has been limited due to the efficiency challenges posed by quantum technology and the need for high throughput of both OT and OLE primitives in boolean- and arithmetic-based SMC.
 
-The overall goal of this dissertation is to give one step closer to the adoption of quantum cryptography by SMC systems. We do this with three contributions. In our first contribution, we start the studying of comparing the efficiency of both classical and quantum protocols. Our second contribution is an implementation of a special-purpose SMC system applied to genomics analysis assisted with quantum OT. Our last contribution is the first quantum OLE protocol which does not rely on OT. Along the way, we produced a review dedicated to quantum OT protocols alone. Usually, its analysis is integrated into more general surveys under the topic of “quantum cryptography”, leading to a less in-depth exposition of the topic.
+The aim of this dissertation is to further the adoption of quantum cryptography in SMC systems through three key contributions. The first contribution involves a study comparing the efficiency of classical and quantum protocols. The second contribution is the implementation of a specialized SMC system for genomics analysis utilizing quantum OT. And the final contribution is the development of the first quantum OLE protocol that does not rely on OT. Additionally, we have also created a comprehensive review dedicated solely to quantum OT protocols, which is often overlooked in broader surveys on the topic of "quantum cryptography."
 
 We describe the contributions in a bit more detail.
 
 \
 
-\noindent\textbf{Efficiency of classical and quantum OT protocols.} To the best of our knowledge, there is no comparative study on the efficiency of quantum and classical approaches. This is mainly caused by two reasons. From a theoretical perspective, the use of different types of information (quantum and classical) makes it difficult to make a fair comparison based on the protocols' complexity. Also, from a practical standpoint, there is still a discrepancy in the technological maturity between quantum and classical techniques. Quantum technology is still in its infancy,  whereas classical processors and communication have many decades of development. 
+\noindent\textbf{Efficiency of classical and quantum OT protocols.} As far as we are aware,there is no comparative study on the efficiency of quantum and classical approaches. This is largely due to two factors. From a theoretical perspective, the use of different types of information (quantum and classical) makes it challenging to establish a fair comparison based on the complexity of the protocols. From a practical perspective, there is also a significant gap in the technological maturity between quantum and classical techniques. Quantum technology is still in its early stages, whereas classical processors and communication have undergone decades of development.
+
+%%% HERE : improving english
 
 Despite these constraints, we compare the complexity and operations efficiency of classical and quantum protocols. To achieve this, we realize that both classical and quantum protocols can be divided into two phases: precomputation and transfer phase. The precomputation phase is characterize by the fact that it is independent of the parties' inputs. This means that, from a practical point-of-view, this phase produces the resources necessary to use during the transfer phase, where we take into consideration the parties' inputs. It can be argued that the precomputation phase is not so hungry-efficient as the transfer phase. As a consequence, for comparison purposes, we can focus on the transfer phase. Fortunately, the transfer phase of quantum OT is solely based on classical communications. Therefore, it is possible and fair to compare the transfer phase of both classical and quantum protocols. 
 
@@ -60,7 +62,7 @@ We consider the static corruption adversarial model with both semi-honest and ma
 
 We theoretically evaluate the performance and privacy guarantees of the system through a complexity analysis and security proof and give an extensive explanation about the implementation details and cryptographic protocols. We also implement a quantum-assisted secure phylogenetic tree computation based on the Libscapi implementation of the Yao protocol, the PHYLIP library and simulated keys of two quantum systems: quantum oblivious key distribution and quantum key distribution.\footnote{ The code can be accessed at the following repo: \href{https://github.com/manel1874/private-phylogenetic-analysis}{https://github.com/manel1874/private-phylogenetic-analysis}}. This demonstrates its effectiveness and practicality. We benchmark our implementation against a classical-only solution and we conclude that both approaches render similar execution times. The only difference between the quantum and classical systems is the time overhead taken by the oblivious key management system of the quantum-assisted approach.
 
-\
+\section*{Outline}
 
 The results are presented as follows. We start presenting the technical elements required throughout the thesis. Chapter~\ref{chapter_QOT} is devoted to quantum oblivious transfer protocols. Then, in Chapter~\ref{classical-and-quantum-OT} we compare classical and quantum approaches for OT. In Chapter~\ref{ch:phylogenetic-trees}, we presented our implementation of quantum-assisted SMC system applied to phylogeny analysis. In Chapter~\ref{ch:QOLE}, we present our quantum OLE protocol along with its security proof. Finally, in Chapter~\ref{ch:conclusion} we present an overall conclusion of the thesis and propose some future work.
 
