--- a/References/References.bib
+++ b/References/References.bib
@@ -4612,6 +4612,15 @@ author = {J. Lawrence Carter and Mark N. Wegman},
 
 }
 
+@misc{S22,
+      author = {Manuel B. Santos},
+      title = {PECO: methods to enhance the privacy of DECO protocol},
+      howpublished = {Cryptology ePrint Archive, Paper 2022/1774},
+      year = {2022},
+      note = {\url{https://eprint.iacr.org/2022/1774}},
+      url = {https://eprint.iacr.org/2022/1774}
+}
+
 
 
 
