--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -41,26 +41,27 @@ We describe the contributions in a bit more detail.
 
 \
 
-\noindent\textbf{Efficiency of classical and quantum OT protocols.} As far as we are aware,there is no comparative study on the efficiency of quantum and classical approaches. This is largely due to two factors. From a theoretical perspective, the use of different types of information (quantum and classical) makes it challenging to establish a fair comparison based on the complexity of the protocols. From a practical perspective, there is also a significant gap in the technological maturity between quantum and classical techniques. Quantum technology is still in its early stages, whereas classical processors and communication have undergone decades of development.
+\noindent\textbf{Efficiency of classical and quantum OT protocols.} As far as we are aware, there is no comparative study on the efficiency of quantum and classical approaches. This is largely due to two factors. From a theoretical perspective, the use of different types of information (quantum and classical) makes it challenging to establish a fair comparison based on the complexity of the protocols. From a practical perspective, there is also a significant gap in the technological maturity between quantum and classical techniques. Quantum technology is still in its early stages, whereas classical processors and communication have undergone decades of development.
 
 %%% HERE : improving english
 
-Despite these constraints, we compare the complexity and operations efficiency of classical and quantum protocols. To achieve this, we realize that both classical and quantum protocols can be divided into two phases: precomputation and transfer phase. The precomputation phase is characterize by the fact that it is independent of the parties' inputs. This means that, from a practical point-of-view, this phase produces the resources necessary to use during the transfer phase, where we take into consideration the parties' inputs. It can be argued that the precomputation phase is not so hungry-efficient as the transfer phase. As a consequence, for comparison purposes, we can focus on the transfer phase. Fortunately, the transfer phase of quantum OT is solely based on classical communications. Therefore, it is possible and fair to compare the transfer phase of both classical and quantum protocols. 
+We compare the complexity and efficiency of classical and quantum protocols, despite their constraints. Both types of protocols can be broken down into two phases: precomputation and transfer. The precomputation phase is independent of the parties' inputs and is used to generate the resources needed in the transfer phase, which takes into account the parties' inputs. This phase may not be as efficient as the transfer phase, so for comparison purposes, we focus on the transfer phase. Notably, the transfer phase of quantum OT only involves classical communication, making it possible and fair to compare it to the transfer phase of classical protocols.
 
-We make a detailed comparison between the complexity of the transfer phase of two state-of-the-art classical OT protocols \cite{ALSZ13, KOS15} and an optimised quantum OT protocol. We conclude that the transfer phase of quantum OT competes with its classical counterparts and has the potential to be more efficient.
 
-\
-
-\noindent\textbf{Quantum oblivious linear evaluation protocol.} Our second contribution is a quantum protocol for OLE with quantum universally composable (quantum-UC) security in the $\mathcal{F}_{\textbf{COM}}-$hybrid model, i.e. when assuming the existence of a commitment functionality, $\mathcal{F}_{\textbf{COM}}$. To obtain a secure protocol, we take advantage of the properties of Mutually Unbiased Bases in high-dimensional Hilbert spaces with prime and prime-power dimension. Such a choice is motivated by recent theoretical and experimental advances that pave the way for the development and realization of new solutions for quantum cryptography \cite{BPT00,DEBZ10,Zhongetal2015,BHVBFHM18,DHMPPV21}. 
-
-To the best of our knowledge our protocol is the first quantum-UC secure quantum OLE proposal. Moreover, it is not based on any quantum OT implementation which would be the standard approach. %Instead, we only assume the existence of a commitment functionality that seems to be a simpler task than OT, as argued in \cite{Unruh10}.
-We consider the static corruption adversarial model with both semi-honest and malicious adversaries. We develop a weaker version of OLE, which may be of independent interest. We also modify the proposed protocol to generate quantum-UC secure vector OLE (VOLE). We give bounds on the possible size of VOLE according to the security parameters.
+We compare the complexity of the transfer phase of two classical OT extension protocols \cite{ALSZ13, KOS15} and an optimized quantum OT protocol in detail. Our conclusion is that the transfer phase of quantum OT is on par with its classical counterparts and has the potential to be more efficient.
 
 \
 
-\noindent\textbf{Quantum assisted secure multiparty computation.} Individuals’ privacy and legal regulations demand genomic data be handled and studied with highly secure privacy-preserving techniques. In this contribution, we propose a feasible secure multiparty computation (SMC) system assisted with quantum cryptographic protocols that is designed to compute a phylogenetic tree from a set of private genome sequences. This system adapts several distance-based methods (Unweighted Pair Group Method with Arithmetic mean, Neighbour-Joining, Fitch-Margoliash) into a private setting where the sequences owned by each party are not disclosed to the other members present in the protocol. We do not apply a generic implementation of SMC to the problem of phylogenetic trees. Instead, we develop a tailored private protocol for this use case in order to improve efficiency. 
+\noindent\textbf{Quantum oblivious linear evaluation protocol.} Our second contribution is a quantum protocol for OLE that provides quantum-UC security in the $\mathcal{F}_{\textbf{COM}}-$hybrid model, which assumes the availability of a commitment functionality, $\mathcal{F}{\textbf{COM}}$. To ensure security, we leverage the properties of Mutually Unbiased Bases in high-dimensional Hilbert spaces with prime and prime-power dimensions. This approach is motivated by recent theoretical and experimental advancements in quantum cryptography \cite{BPT00,DEBZ10,Zhongetal2015,BHVBFHM18,DHMPPV21} that have opened the door for new solutions in the field.
 
-We theoretically evaluate the performance and privacy guarantees of the system through a complexity analysis and security proof and give an extensive explanation about the implementation details and cryptographic protocols. We also implement a quantum-assisted secure phylogenetic tree computation based on the Libscapi implementation of the Yao protocol, the PHYLIP library and simulated keys of two quantum systems: quantum oblivious key distribution and quantum key distribution.\footnote{ The code can be accessed at the following repo: \href{https://github.com/manel1874/private-phylogenetic-analysis}{https://github.com/manel1874/private-phylogenetic-analysis}}. This demonstrates its effectiveness and practicality. We benchmark our implementation against a classical-only solution and we conclude that both approaches render similar execution times. The only difference between the quantum and classical systems is the time overhead taken by the oblivious key management system of the quantum-assisted approach.
+As far as we are aware, our protocol is the first to propose a quantum-UC secure quantum OLE. Furthermore, it does not rely on any quantum OT implementation, which is a common approach. We design the protocol to handle static corruption adversarial model for both semi-honest and malicious adversaries. Additionally, we introduce a weaker version of OLE, which has potential independent value. We also modify the proposed protocol to generate quantum-UC secure vector OLE (VOLE) and provide bounds on the size of VOLE based on the security parameters.
+
+\
+
+\noindent\textbf{Quantum assisted secure multiparty computation.} In light of individuals' privacy concerns and legal regulations, it is crucial to handle and study genomic data using highly secure privacy-preserving techniques. We propose a practical secure multiparty computation (SMC) system that utilizes quantum cryptographic protocols to compute a phylogenetic tree from a set of private genome sequences. This system applies several distance-based methods, such as Unweighted Pair Group Method with Arithmetic mean, Neighbour-Joining, and Fitch-Margoliash, in a private setting where the sequences owned by each party are not revealed to other members during the protocol. Instead of using a generic SMC implementation for phylogenetic trees, we develop a specialized private protocol that improves efficiency for this specific use case.
+
+
+We conduct a theoretical evaluation of the performance and privacy guarantees of our proposed system, providing a complexity analysis and security proof. We also provide a detailed explanation of the implementation details and cryptographic protocols used. We demonstrate the effectiveness and practicality of our quantum-assisted secure phylogenetic tree computation by implementing it using the Libscapi implementation of the Yao protocol, the PHYLIP library and simulated keys of two quantum systems: quantum oblivious key distribution and quantum key distribution. \footnote{ The code can be accessed at the following repo: \href{https://github.com/manel1874/private-phylogenetic-analysis}{github.com/manel1874/private-phylogenetic-analysis}.} We compare our implementation with a classical-only solution and find that both approaches have similar execution times. The only difference between the quantum and classical systems is the time overhead taken by the quantum-assisted approach for oblivious key management.
 
 \section*{Outline}
 
@@ -71,11 +72,11 @@ The results are presented as follows. We start presenting the technical elements
 
 \noindent\textbf{Published research}
 
-This thesis is based on research published in various journals. During my PhD I was involved in the following projects.
+\noindent This thesis draws on research published in various journals and presents the results of my PhD work, which involved the following projects.
 
 \begin{itemize}
-	\item\cite{SMV22} Manuel B. Santos, Paulo Mateus, and Chrysoula Vlachou. Quantum Universally
-Composable Oblivious Linear Evaluation. 2022. DOI: 10.48550/ARXIV.2204.14171. Poster at QCrypt2022.	
+	\item\cite{SMV22} Manuel B. Santos, Paulo Mateus, and Chrysoula Vlachou. “Quantum Universally
+Composable Oblivious Linear Evaluation”. 2022. DOI: 10.48550/ARXIV.2204.14171. Poster at QCrypt2022.	
 	
 	\item\cite{SMP22} Manuel B. Santos, Paulo Mateus, and Armando N. Pinto. “Quantum Oblivious Transfer:
 A Short Review”. In: Entropy 24.7 (2022), p. 945.
@@ -94,6 +95,36 @@ Networks (ICTON). IEEE, July 2020.
 \end{itemize}
 
 Chapter~\ref{chapter_QOT} is based on \cite{SMP22} and \cite{SGPM22}. Chapter~\ref{classical-and-quantum-OT} is based on the work developed on both \cite{SPM21} and \cite{SGPM22}. Chapter~\ref{ch:phylogenetic-trees} is the combination of \cite{SGPM22, SGPM21, POS+20}. Finally, Chapter~\ref{ch:QOLE} presents all the results from \cite{SMV22}. 
+
+\
+
+\
+
+\noindent\textbf{Further research}
+
+\noindent Also, during my PhD I was involved in the following projects which are not included in this thesis.
+
+\begin{itemize}
+	\item \cite{S22} Manuel B. Santos. “PECO: methods to enhance the privacy of DECO protocol”. 2022. In: Cryptology ePrint Archive, Paper 2022/1774.
+	\item \cite{SMV23} Manuel B. Santos, Paulo Mateus, and Chrysoula Vlachou. “Noise-resistent Quantum Oblivious Linear Evaluation”. 2023. DOI: XXXX..
+	\item \cite{TSP23} Miguel Teixeira, Manuel B. Santos, Armando N. Pinto. "Quantum Blockchain". 2023. In: IEEE Access.
+	\item \cite{SP23} Manuel B. Santos, Armando N. Pinto. "Private car crash report". 2023. In: ICTON.
+\end{itemize}
+
+
+\
+
+\noindent\textbf{Libraries/forks developed}
+
+\noindent During the course of my PhD, I developed several library forks that were utilized in the publications \cite{SGPM22, SGPM21, TSP23, SP23}.
+
+\begin{itemize}
+	\item  \href{https://github.com/manel1874/OTKeys}{github.com/manel1874/OTKeys}: an implementation of a string oblivious transfer based on oblivious keys and random oblivious transfer keys.
+	\item  \href{https://github.com/manel1874/private-phylogenetic-analysis}{github.com/manel1874/private-phylogenetic-analysis}: an application that securely computes phylogenetic trees based on the PHYLIP package, secure multiparty computation and quantum technologies.
+	\item \href{https://github.com/manel1874/libscapi}{github.com/manel1874/libscapi}: a fork from Libscapi \cite{libscapi} that includes modifications to support quantum-secure MPC protocols.
+	\item \href{https://github.com/manel1874/QMP-SPDZ}{github.com/manel1874/QMP-SPDZ}:  a fork from MP-SPDZ \cite{} that includes modifications to support quantum-secure MPC protocols.
+\end{itemize}
+
 
 %\bibliography{bibforthesis}
 %\bibliographystyle{unsrt}
