Technical chapter : done

--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -35,7 +35,7 @@ Also, the intrinsic randomness provided by quantum phenomena can be leveraged to
 
 Despite the many advances, the adoption of quantum cryptography in secure multiparty computation (SMC) systems has been limited due to the efficiency challenges posed by quantum technology and the need for high throughput of both OT and OLE primitives in boolean- and arithmetic-based SMC.
 
-The aim of this dissertation is to further the adoption of quantum cryptography in SMC systems through three key contributions. The first contribution involves a study comparing the efficiency of classical and quantum protocols. The second contribution is the implementation of a specialized SMC system for genomics analysis utilizing quantum OT. And the final contribution is the development of the first quantum OLE protocol that does not rely on OT. Additionally, we have also created a comprehensive review dedicated solely to quantum OT protocols, which is often overlooked in broader surveys on the topic of "quantum cryptography."
+The aim of this dissertation is to further the adoption of quantum cryptography in SMC systems through three key contributions. The first contribution involves a study comparing the efficiency of classical and quantum protocols. The second contribution is the implementation of a specialized SMC system for genomics analysis utilizing quantum OT. And the final contribution is the development of the first quantum OLE protocol that does not rely on OT. Additionally, we have also created a comprehensive review dedicated solely to quantum OT protocols, which is often overlooked in broader surveys on the topic of ``quantum cryptography''.
 
 We describe the contributions in a bit more detail.
 
@@ -107,8 +107,8 @@ Chapter~\ref{chapter_QOT} is based on \cite{SMP22} and \cite{SGPM22}. Chapter~\r
 \begin{itemize}
 	\item \cite{S22} Manuel B. Santos. “PECO: methods to enhance the privacy of DECO protocol”. 2022. In: Cryptology ePrint Archive, Paper 2022/1774.
 	\item \cite{SMV23} Manuel B. Santos, Paulo Mateus, and Chrysoula Vlachou. “Noise-resistent Quantum Oblivious Linear Evaluation”. 2023. DOI: XXXX..
-	\item \cite{TSP23} Miguel Teixeira, Manuel B. Santos, Armando N. Pinto. "Quantum Blockchain". 2023. In: IEEE Access.
-	\item \cite{SP23} Manuel B. Santos, Armando N. Pinto. "Private car crash report". 2023. In: ICTON.
+	\item \cite{TSP23} Miguel Teixeira, Manuel B. Santos, Armando N. Pinto. ``Quantum Blockchain''. 2023. In: IEEE Access.
+	\item \cite{SP23} Manuel B. Santos, Armando N. Pinto. ``Private car crash report''. 2023. In: ICTON.
 \end{itemize}
 
 
