Ready to final read

--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -96,34 +96,34 @@ Networks (ICTON). IEEE, July 2020.
 
 Chapter~\ref{chapter_QOT} is based on \cite{SMP22} and \cite{SGPM22}. Chapter~\ref{classical-and-quantum-OT} is based on the work developed on both \cite{SPM21} and \cite{SGPM22}. Chapter~\ref{ch:phylogenetic-trees} is the combination of \cite{SGPM22, SGPM21, POS+20}. Finally, Chapter~\ref{ch:QOLE} presents all the results from \cite{SMV22}. 
 
-\
+%\
 
-\
+%\
 
-\noindent\textbf{Further research}
+%\noindent\textbf{Further research}
 
-\noindent Also, during my PhD I was involved in the following projects which are not included in this thesis.
+%\noindent Also, during my PhD I was involved in the following projects which are not included in this thesis.
 
-\begin{itemize}
-	\item \cite{S22} Manuel B. Santos. “PECO: methods to enhance the privacy of DECO protocol”. 2022. In: Cryptology ePrint Archive, Paper 2022/1774.
-	\item \cite{SMV23} Manuel B. Santos, Paulo Mateus, and Chrysoula Vlachou. “Noise-resistent Quantum Oblivious Linear Evaluation”. 2023. DOI: XXXX..
-	\item \cite{TSP23} Miguel Teixeira, Manuel B. Santos, Armando N. Pinto. ``Quantum Blockchain''. 2023. In: IEEE Access.
-	\item \cite{SP23} Manuel B. Santos, Armando N. Pinto. ``Private car crash report''. 2023. In: ICTON.
-\end{itemize}
+%\begin{itemize}
+%	\item \cite{S22} Manuel B. Santos. “PECO: methods to enhance the privacy of DECO protocol”. 2022. In: Cryptology ePrint Archive, Paper 2022/1774.
+%	\item \cite{SMV23} Manuel B. Santos, Paulo Mateus, and Chrysoula Vlachou. “Noise-resistent Quantum Oblivious Linear Evaluation”. 2023. DOI: XXXX..
+%	\item \cite{TSP23} Miguel Teixeira, Manuel B. Santos, Armando N. Pinto. ``Quantum Blockchain''. 2023. In: IEEE Access.
+%	\item \cite{SP23} Manuel B. Santos, Armando N. Pinto. ``Private car crash report''. 2023. In: ICTON.
+%\end{itemize}
 
 
-\
+%\
 
-\noindent\textbf{Libraries/forks developed}
+%\noindent\textbf{Libraries/forks developed}
 
-\noindent During the course of my PhD, I developed several library forks that were utilized in the publications \cite{SGPM22, SGPM21, TSP23, SP23}.
+%\noindent During the course of my PhD, I developed several library forks that were utilized in the publications \cite{SGPM22, SGPM21, TSP23, SP23}.
 
-\begin{itemize}
-	\item  \href{https://github.com/manel1874/OTKeys}{github.com/manel1874/OTKeys}: an implementation of a string oblivious transfer based on oblivious keys and random oblivious transfer keys.
-	\item  \href{https://github.com/manel1874/private-phylogenetic-analysis}{github.com/manel1874/private-phylogenetic-analysis}: an application that securely computes phylogenetic trees based on the PHYLIP package, secure multiparty computation and quantum technologies.
-	\item \href{https://github.com/manel1874/libscapi}{github.com/manel1874/libscapi}: a fork from Libscapi \cite{libscapi} that includes modifications to support quantum-secure MPC protocols.
-	\item \href{https://github.com/manel1874/QMP-SPDZ}{github.com/manel1874/QMP-SPDZ}:  a fork from MP-SPDZ \cite{} that includes modifications to support quantum-secure MPC protocols.
-\end{itemize}
+%\begin{itemize}
+%	\item  \href{https://github.com/manel1874/OTKeys}{github.com/manel1874/OTKeys}: an implementation of a string %oblivious transfer based on oblivious keys and random oblivious transfer keys.
+%	\item  \href{https://github.com/manel1874/private-phylogenetic-analysis}{github.com/manel1874/private-%phylogenetic-analysis}: an application that securely computes phylogenetic trees based on the PHYLIP package, secure %multiparty computation and quantum technologies.
+%	\item \href{https://github.com/manel1874/libscapi}{github.com/manel1874/libscapi}: a fork from Libscapi %\cite{libscapi} that includes modifications to support quantum-secure MPC protocols.
+%	\item \href{https://github.com/manel1874/QMP-SPDZ}{github.com/manel1874/QMP-SPDZ}:  a fork from MP-SPDZ %\cite{} that includes modifications to support quantum-secure MPC protocols.
+%\end{itemize}
 
 
 %\bibliography{bibforthesis}
