Update images of phylogenetic trees

--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -782,6 +782,11 @@
 \usepackage{bm}
 \usepackage{dsfont}
 
+\usepackage{pgfplots, pgfplotstable}
+\usepackage{xcolor}
+\definecolor{myblue}{HTML}{5EA5C7}
+\definecolor{myorange}{HTML}{E97E47}
+
 \newcommand*{\vertbar}{\rule[-1ex]{0.5pt}{2.5ex}}
 \newcommand*{\bigvertbar}{\rule[-1ex]{0.5pt}{4.5ex}}
 \newcommand*{\horzbar}{\rule[.5ex]{2.5ex}{0.5pt}}
