Update Armando changes

--- a/List_of_Abbreviations.tex
+++ b/List_of_Abbreviations.tex
@@ -9,15 +9,15 @@
 \vspace{0.5cm}\\
 \textbf{BB84} -- Quantum key distribution protocol developed by Charles Bennet and Gilles Brassard in 1984 \cite{BB84}.
 \vspace{0.5cm}\\
-\textbf{BBCS} -- Bennet, Brassard, Crépeau, Skubiszewska.
+\textbf{BBCS} -- Quantum oblivious transfer protocol developed by Bennet, Brassard, Crépeau and Skubiszewska \cite{BBCS92}.
 \vspace{0.5cm}\\
-\textbf{BCJL} -- Brassard, Crépeau, Jozsa, Langlois.
+\textbf{BCJL} -- Quantum bit commitment protocol developed by Brassard, Crépeau, Jozsa and Langlois \cite{BCJL93}.
 \vspace{0.5cm}\\
-\textbf{BGW} -- Ben-Or, Goldwasser, Wigderson.
+\textbf{BGW} -- Secure multiparty computation protocol developed by Ben-Or, Goldwasser and Wigderson \cite{BGW88}.
 \vspace{0.5cm}\\
-\textbf{BM} -- Bellare, Micali.
+\textbf{BM} -- Oblivious transfer protocol developed by Bellare and Micali \cite{BM89}.
 \vspace{0.5cm}\\
-\textbf{BMR} -- Beaver, Micali, Rogaway.
+\textbf{BMR} -- Secure multiparty computation protocol developed by Beaver, Micali and Rogaway \cite{BMR90}.
 \vspace{0.5cm}\\
 \textbf{BQS} -- Bounded-quantum-storage model.
 \vspace{0.5cm}\\
@@ -25,7 +25,7 @@
 \vspace{0.5cm}\\
 \textbf{CBMC-GC} -- C Bounded model checker - Garbled Circuit.
 \vspace{0.5cm}\\
-\textbf{CCD} -- David Chaum, Claude Crépeau, Ivan Damg\'{a}rd.
+\textbf{CCD} -- Secure multiparty computation protocol developed by Chaum, Crépeau and Damg\'{a}rd \cite{CCD88}.
 \vspace{0.5cm}\\
 \textbf{COM} -- Commitment.
 \vspace{0.5cm}\\
@@ -43,8 +43,6 @@
 \vspace{0.5cm}\\
 \textbf{EGL} -- Even, Goldreich, Lempel.
 \vspace{0.5cm}\\
-\textbf{EGL} -- Even, Goldreich, Lempel.
-\vspace{0.5cm}\\
 \textbf{F84} -- Evolutionary distance developed by Felsenstein.
 \vspace{0.5cm}\\
 \textbf{FSA} -- Faked-state attacks.
@@ -53,7 +51,7 @@
 \vspace{0.5cm}\\
 \textbf{GISAID} -- Global initiative on sharing avian influenza data.
 \vspace{0.5cm}\\
-\textbf{GMW} -- Goldreich, Micali, Wigderson.
+\textbf{GMW} -- Secure multiparty computation protocol developed by Goldreich, Micali and Wigderson \cite{GMW87}.
 \vspace{0.5cm}\\
 \textbf{GWAS} -- Genome-wide association studies.
 \vspace{0.5cm}\\
@@ -63,7 +61,7 @@
 \vspace{0.5cm}\\
 \textbf{K2P} -- Kimura 2-parameter.
 \vspace{0.5cm}\\
-\textbf{KOS15} -- OT extension protocol developed by Marcel Keller, Emmanuela Orsini and Peter Scholl \cite{KOS15}.
+\textbf{KOS15} -- OT extension protocol developed by Keller, Orsini and Scholl \cite{KOS15}.
 \vspace{0.5cm}\\
 \textbf{LAN} -- Local area network.
 \vspace{0.5cm}\\
@@ -79,7 +77,7 @@
 \vspace{0.5cm}\\
 \textbf{MUB} -- Mutually unbiased bases.
 \vspace{0.5cm}\\
-\textbf{NP} -- Naor, Pinkas.
+\textbf{NP} -- Oblivious transfer protocol developed by Naor and Pinkas \cite{NP01}.
 \vspace{0.5cm}\\
 \textbf{NQS} -- Noisy quantum storage model.
 \vspace{0.5cm}\\
@@ -117,7 +115,7 @@
 \vspace{0.5cm}\\
 \textbf{RNG} -- Random number generator.
 \vspace{0.5cm}\\
-\textbf{RSA} -- Rivest, Shamir, Adleman.
+\textbf{RSA} -- Public-key cryptosystem developed by Rivest, Shamir and Adleman.
 \vspace{0.5cm}\\
 \textbf{RWOLE} -- Random weak oblivious linear evaluation.
 \vspace{0.5cm}\\
