--- a/Thesis_FrontCover.tex
+++ b/Thesis_FrontCover.tex
@@ -19,7 +19,7 @@
 % Title, author and degree
 \vspace{5.0cm}
 {\FontHb 
-Quantum assisted Secure Multiparty Computation} \\
+Quantum Assisted Secure Multiparty Computation} \\
 
 \vspace{3cm}
 {\FontLn Manuel Batalha dos Santos} \\
