--- a/abstract.tex
+++ b/abstract.tex
@@ -8,10 +8,10 @@ The most significant application of oblivious transfer (OT) is in the realm of s
 
 Building on the theoretical comparison of quantum and classical approaches to oblivious transfer, the thesis integrates and compares both within an SMC system for genomic analysis. The proposed system utilizes quantum cryptographic protocols to compute a phylogenetic tree from a set of private genome sequences. This system significantly improves the privacy and security of the computation by incorporating three quantum cryptographic protocols that provide enhanced security against quantum computer attacks. The system adapts several distance-based methods, such as the Unweighted Pair Group Method with Arithmetic mean, Neighbour-Joining, and Fitch-Margoliash, into a private setting where the sequences owned by each party are not disclosed to other members. The performance and privacy guarantees of the system are evaluated theoretically through complexity analysis and security proof. Additionally, the thesis provides an extensive explanation of the implementation details and cryptographic protocols used. The implementation of quantum-assisted secure phylogenetic tree computation is based on the Libscapi implementation of the Yao protocol, the PHYLIP library, and simulated keys of two quantum systems: quantum oblivious key distribution and quantum key distribution. The implementation is benchmarked against a classical-only solution, and the results indicate that both approaches have similar execution times, with the only difference being the time overhead taken by the oblivious key management system of the quantum-assisted approach.
 
-Finally, the thesis presents the first quantum protocol for oblivious linear evaluation. Oblivious linear evaluation is a generalization of oblivious transfer, where two distrustful parties can obliviously compute a linear function, $f(x) = ax + b$, without revealing their inputs to each other, and the output $f(x)$ is known to only one of them. This primitive is essential for arithmetic-based secure multiparty computation protocols from both a structural and security point of view. In the classical setting, it is known that oblivious linear evaluation can be generated based on oblivious transfer, and quantum counterparts of these protocols can, in principle, be constructed as straightforward extensions based on quantum oblivious transfer. However, the thesis presents a novel quantum protocol for oblivious linear evaluation that does not rely on quantum oblivious transfer. The protocol is first presented for the semi-honest setting and then extended to the dishonest setting using a commit-and-open strategy. The protocol uses high-dimensional quantum states to obliviously compute the linear function, $f(x)$, on Galois fields of prime dimension, $GF(d) \cong \mathbb{Z}_d$, or prime-power dimension, $GF(d^M)$. The protocol utilizes a complete set of mutually unbiased bases in prime-power dimension Hilbert spaces and their linear behavior upon the Heisenberg-Weyl operators. The protocol is also generalized to achieve vector oblivious linear evaluation, which increases efficiency by generating several instances of oblivious linear evaluation. The security of the protocol is proven in the framework of quantum universal composability.
+Finally, the thesis presents the first quantum protocol for oblivious linear evaluation. Oblivious linear evaluation is a generalization of oblivious transfer, where two distrustful parties, Alice and Bob, obliviously compute a linear function, $f(x) = ax + b$, without revealing their inputs to each other. Alice inputs the function coefficients, $a$ and $b$, and Bob inputs the function input, $x$. The output, $f(x)$, is only delivered by Bob. This primitive is essential for arithmetic-based secure multiparty computation protocols from both a structural and security point of view. In the classical setting, it is known that oblivious linear evaluation can be generated based on oblivious transfer, and quantum counterparts of these protocols can, in principle, be constructed as straightforward extensions based on quantum oblivious transfer. However, the thesis presents a novel quantum protocol for oblivious linear evaluation that does not rely on quantum oblivious transfer. The protocol is first presented for the semi-honest setting and then extended to the dishonest setting using a commit-and-open strategy. The protocol uses high-dimensional quantum states to obliviously compute the linear function, $f(x)$, on Galois fields of prime dimension, $GF(d) \cong \mathbb{Z}_d$, or prime-power dimension, $GF(d^M)$. The protocol utilizes a complete set of mutually unbiased bases in prime-power dimension Hilbert spaces and their linear behavior upon the Heisenberg-Weyl operators. The protocol is also generalized to achieve vector oblivious linear evaluation, which increases efficiency by generating several instances of oblivious linear evaluation. The security of the protocol is proven in the framework of quantum universal composability.
 
 \vfill
 
 \begin{flushleft}
-\textbf{Key-words:} quantum cryptography, quantum oblivious transfer, quantum obliious linear evaluation, secure multiparty computation.
+\textbf{Key-words:} quantum cryptography, quantum oblivious transfer, quantum oblivious linear evaluation, secure multiparty computation.
 \end{flushleft}
