--- a/resumo.tex
+++ b/resumo.tex
@@ -5,7 +5,7 @@
 \addcontentsline{toc}{section}{Resumo}
 
 
-A criptografia quântica é o campo da criptografia que explora as propriedades quânticas da matéria. Geralmente, visa desenvolver primitivas fora do alcance da criptografia clássica e melhorar as implementações clássicas existentes. Embora grande parte do trabalho neste campo se foque na distribuição de chaves quânticas (\textit{quantum key distribution}, QKD), também têm existido desenvolvimentos cruciais para a compreensão e desenvolvimento de outras primitivas criptográficas, como a transferência oblívia quântica (\textit{quantum oblivious transfer}, QOT). Pode-se mostrar a semelhança entre a estrutura de aplicação das primitivas QKD e QOT. Assim como os protocolos QKD permitem comunicação com segurança quântica, os protocolos QOT permitem computação com segurança quântica. No entanto, as condições sob as quais o QOT é totalmente seguro quântico têm sido sujeitas a um intenso estudo. Nesta tese, começamos por fazer um levantamento do trabalho desenvolvido em torno do conceito de OT dentro da criptografia quântica teórica. Aqui concentramo-nos em alguns protocolos propostos e nos seus requisitos de segurança. Revisitamos os resultados de impossibilidade que intimidam esta primitiva e discutimos vários modelos quânticos de segurança sob os quais é possível provar a segurança do QOT.
+A criptografia quântica é o campo da criptografia que explora as propriedades quânticas da matéria. Geralmente, visa desenvolver primitivas fora do alcance da criptografia clássica e melhorar as implementações clássicas existentes. Embora grande parte do trabalho neste campo se foque na distribuição de chaves quânticas (\textit{quantum key distribution}, QKD), também têm existido desenvolvimentos cruciais para a compreensão e desenvolvimento de outras primitivas criptográficas, como a transferência oblívia quântica (\textit{quantum oblivious transfer}, QOT). Pode-se mostrar a semelhança entre a estrutura de aplicação das primitivas QKD e QOT. Assim como os protocolos QKD permitem comunicação com segurança quântica, os protocolos QOT permitem computação com segurança quântica. No entanto, as condições sob as quais o QOT é totalmente seguro quântico têm sido sujeitas a um intenso estudo. Nesta tese, começamos por fazer um levantamento do trabalho desenvolvido em torno do conceito de OT dentro da criptografia quântica teórica. Aqui concentramo-nos em alguns protocolos propostos e nos seus requisitos de segurança. Revisitamos os resultados de impossibilidade desta primitiva e discutimos vários modelos quânticos de segurança sob os quais é possível provar a segurança do QOT.
 
 A aplicação mais famosa do OT está no domínio da computação multipartidária segura (\textit{secure multiparty computation}, SMC). Esta tecnologia tem o potencial de ser disruptiva nas áreas de análise e computação de dados. Esta permite que vários participantes calculem um certa função, preservando a privacidade dos seus dados. No entanto, a maior parte da segurança e eficiência do protocolos SMD dependem da segurança e eficiência do OT. Por esta razão, fazemos uma comparação detalhada entre a complexidade da QOT baseada em chaves oblívias e dois dos protocolos OT clássicos mais rápidos.
 
@@ -15,5 +15,5 @@ Finalmente, apresentamos o primeiro protocolo quântico de  avaliação linear o
 
 \vfill
 \begin{flushleft}
-\textbf{Palavras-chave:} criptografia qu\^{a}ntica, passeios qu\^{a}nticos, mem\'{o}rias qu\^{a}nticas, transi\c{c}\~{o}es de fase topol\'{o}gicas, estados de fronteira
+\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura.
 \end{flushleft}
