--- a/References/References.bib
+++ b/References/References.bib
@@ -3988,7 +3988,7 @@ isbn="978-3-030-17659-4"
   publisher = {Springer Berlin Heidelberg},
   pages = {172--189},
   author = {Shai Halevi and Hugo Krawczyk},
-  title = {{MMH}: Software message authentication in the Gbit/second rates},
+  title = {{MMH}: Software message authentication in the {G}bit/second rates},
   booktitle = {Fast Software Encryption}
 }
 
