--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -15,7 +15,7 @@ The field of data mining and data analysis has seen significant advancements wit
 
 To address the privacy concerns outlined above, various privacy-enhancing technologies have been proposed, such as secure multiparty computation (SMC) \cite{Li2016, Armknecht2015, Yao82}. SMC enables a group of $n$ parties, denoted as $P_i$, to jointly compute a function $f( x_1, ..., x_n ) = (y_1, ..., y_n)$ without revealing their inputs to the other parties. The security requirements of SMC are equivalent to an ideal scenario, where each party $P_i$ sends their inputs to a separate, trusted third party, who then computes $f()$ and returns the corresponding output to each party.
 
-The research area of SMC has been greatly advanced with the development of various protocols and frameworks \cite{Goldreich87, Bendlin11, D12}. These protocols can be broadly classified into two categories: those based on boolean logic and those based on arithmetic logic. The efficiency and security of SMC protocols rely heavily on the efficiency and security of important cryptographic primitives, such as oblivious transfer (OT) for boolean-based protocols and oblivious linear evaluation (OLE) for arithmetic-based protocols. However, a fundamental limitation of these primitives is their reliance on public cryptography, as proven by Impagliazzo and Rudich \cite{IR99}. This dependence on public cryptography is a significant drawback in terms of both performance and security, as it requires more computational resources and is vulnerable to attacks from quantum computers, as demonstrated by Shor's algorithm \cite{Sho95}. To address these issues and ensure the safe deployment of SMC methods in the face of quantum computing, it is crucial to develop SMC methods that are secure against quantum attacks while maintaining state-of-the-art performance levels.
+The research area of SMC has been greatly advanced with the development of various protocols and frameworks \cite{Goldreich87, Bendlin11, D12}. These protocols can be broadly classified into two categories: those based on boolean logic and those based on arithmetic logic. The efficiency and security of SMC protocols rely heavily on the efficiency and security of important cryptographic primitives, such as oblivious transfer (OT) for boolean-based protocols and oblivious linear evaluation (OLE) for arithmetic-based protocols \citep{Yao82, KOS16}. However, a fundamental limitation of these primitives is their reliance on public-key cryptography, as proven by Impagliazzo and Rudich \cite{IR99}. This dependence on public-key cryptography is a significant drawback in terms of both performance and security, as it requires more computational resources and is vulnerable to attacks from quantum computers, as demonstrated by Shor's algorithm \cite{Sho95}. To address these issues and ensure the safe deployment of SMC methods in the face of quantum computing, it is crucial to develop SMC methods that are secure against quantum attacks while maintaining state-of-the-art performance levels.
 
 
 \section*{A quantum era}
@@ -28,22 +28,18 @@ The second quantum revolution is upon us and quantum technology has advanced to 
 \end{enumerate}
 While quantum key distribution (QKD) is the most well-known application of quantum cryptography, other cryptographic tasks such as bit commitment \cite{CK11}, coin flipping \cite{CK09}, delegated quantum computation \cite{BFK09}, position verification \cite{Unr14}, and password-based identification \cite{DFSS14, DFLSS09} also play important roles in this field.
 
-Also, the intrinsic randomness provided by quantum phenomena can be leveraged to develop quantum communication protocols for oblivious transfer (OT) \cite{BBCS92}. Importantly, there is a significant difference between classical and quantum OT from a security standpoint, as the latter can be achieved with only the assumption of the existence of quantum-hard one-way functions \cite{GLSV21, BCKM21}. This means quantum OT can be based solely on symmetric cryptography, requiring less security assumptions than classical OT. Furthermore, these quantum protocols often possess the desirable property of everlasting security, which guarantees information-theoretic security after the execution of the protocol. This greatly improves the security of SMC protocols, allowing them to rely solely on symmetric cryptography and possess the important feature of everlasting security. With regards to the oblivious linear evaluation (OLE) primitive, it is known that it can be reduced to OT \cite{KOS16} through classical methods that do not require additional assumptions. Therefore, it seems natural to use quantum OT to generate quantum-secure OLE instances.
+Also, the intrinsic randomness provided by quantum phenomena can be leveraged to develop quantum communication protocols for oblivious transfer (OT) \cite{BBCS92}. Importantly, there is a significant difference between classical and quantum OT from a security standpoint, as the latter can be achieved with only the assumption of the existence of quantum-hard one-way functions \cite{GLSV21, BCKM21}. This means quantum OT can be based solely on symmetric cryptography, requiring less security assumptions than classical OT. Furthermore, these quantum protocols often possess the desirable property of everlasting security, which guarantees information-theoretic security after the execution of the protocol \citep{U10}. This greatly improves the security of SMC protocols, allowing them to rely solely on symmetric cryptography and possess the important feature of everlasting security. With regards to the oblivious linear evaluation (OLE) primitive, it is known that it can be reduced to OT \cite{KOS16} through classical methods that do not require additional assumptions. Therefore, it seems natural to use quantum OT to generate quantum-secure OLE instances.
 
 
 \section*{Contributions} %Section - 1.2
 
 Despite the many advances, the adoption of quantum cryptography in secure multiparty computation (SMC) systems has been limited due to the efficiency challenges posed by quantum technology and the need for high throughput of both OT and OLE primitives in boolean- and arithmetic-based SMC.
 
-The aim of this dissertation is to further the adoption of quantum cryptography in SMC systems through three key contributions. The first contribution involves a study comparing the efficiency of classical and quantum protocols. The second contribution is the implementation of a specialized SMC system for genomics analysis utilizing quantum OT. And the final contribution is the development of the first quantum OLE protocol that does not rely on OT. Additionally, we have also created a comprehensive review dedicated solely to quantum OT protocols, which is often overlooked in broader surveys on the topic of ``quantum cryptography''.
-
-We describe the contributions in a bit more detail.
+The aim of this thesis is to further the adoption of quantum cryptography in SMC systems through three key contributions. The first contribution involves a study comparing the efficiency of classical and quantum protocols. The second contribution is the implementation of a specialized SMC system for genomics analysis utilizing quantum OT. And the final contribution is the development of the first quantum OLE protocol that does not rely on OT. Additionally, we have also created a comprehensive review dedicated solely to quantum OT protocols, which is often overlooked in broader surveys on the topic of ``quantum cryptography''. We describe the contributions in a bit more detail.
 
 \
 
 \noindent\textbf{Efficiency of classical and quantum OT protocols.} As far as we are aware, there is no comparative study on the efficiency of quantum and classical approaches. This is largely due to two factors. From a theoretical perspective, the use of different types of information (quantum and classical) makes it challenging to establish a fair comparison based on the complexity of the protocols. From a practical perspective, there is also a significant gap in the technological maturity between quantum and classical techniques. Quantum technology is still in its early stages, whereas classical processors and communication have undergone decades of development.
-
-%%% HERE : improving english
 
 We compare the complexity and efficiency of classical and quantum protocols, despite their constraints. Both types of protocols can be broken down into two phases: precomputation and transfer. The precomputation phase is independent of the parties' inputs and is used to generate the resources needed in the transfer phase, which takes into account the parties' inputs. This phase may not be as efficient as the transfer phase, so for comparison purposes, we focus on the transfer phase. Notably, the transfer phase of quantum OT only involves classical communication, making it possible and fair to compare it to the transfer phase of classical protocols.
 
@@ -65,7 +61,7 @@ As far as we are aware, our protocol is the first to propose a quantum-UC secure
 
 \section*{Outline}
 
-The results are presented as follows. We start presenting the technical elements required throughout the thesis. Chapter~\ref{chapter_QOT} is devoted to quantum oblivious transfer protocols. Then, in Chapter~\ref{classical-and-quantum-OT} we compare classical and quantum approaches for OT. In Chapter~\ref{ch:phylogenetic-trees}, we presented our implementation of quantum-assisted SMC system applied to phylogeny analysis. In Chapter~\ref{ch:QOLE}, we present our quantum OLE protocol along with its security proof. Finally, in Chapter~\ref{ch:conclusion} we present an overall conclusion of the thesis and propose some future work.
+The results are presented as follows. We start presenting the technical elements required throughout the thesis in Chapter~\ref{ch:tech-overview}. Chapter~\ref{chapter_QOT} is devoted to quantum oblivious transfer protocols. Then, in Chapter~\ref{classical-and-quantum-OT} we compare classical and quantum approaches for OT. In Chapter~\ref{ch:phylogenetic-trees}, we presented our implementation of quantum-assisted SMC system applied to phylogeny analysis. In Chapter~\ref{ch:QOLE}, we present our quantum OLE protocol along with its security proof. Finally, in Chapter~\ref{ch:conclusion} we present an overall conclusion of the thesis and propose some future work.
 
 
 \
